--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "primeiro-projeto-node",
+  "name": "typescript-express-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
